--- a/lab5_redo/lab5.html
+++ b/lab5_redo/lab5.html
@@ -6,26 +6,12 @@
     <title>JavaScript - To Do List</title>
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/lab5.css">
-    <link rel="stylesheet" href="css/main.css">
+   <!-- <link rel="stylesheet" href="css/main.css">-->
     <link rel="stylesheet" href="css/flexbox.css">
     <script src="js/code.js"></script>
 </head>
 <body>
 
-<header style="width: 100%; background-color: white; position: sticky; top: 0">
-    <nav class="main-header">
-        <h1 class="name"><a href="https://www.facebook.com/viictoroo7/">Showvik Mazumder</a></h1>
-        <ul class="main-nav">
-            <li><a class="link_element" href="index.html">Home</a></li>
-            <li><a class="link_element" href="page2.html">page2</a></li>
-            <li><a class="link_element" href="https://github.com/skroo7/Web---programming/deployments/activity_log?environment=github-pages">github</a></li>
-            <li><a class="link_element" href="lab5.html">Lab5</a></li>
-            <li><a class="link_element" href="lab6.html">Lab6</a></li>
-
-        </ul>
-    </nav>
-
-</header>
 
 
     <div class="container">
@@ -45,7 +31,7 @@
         </template>
         <div class="content">
             <ul id="list">
-               <!-- 
+               <!--
                 <li class="item">
                     <i class="fa fa-circle-thin co" job="complete" id="0"></i>
                     <p class="text">Drink Coffee</p>
