--- a/lab7/index.html
+++ b/lab7/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <meta name="lab3" content="lab3 again, initial-scale=1.0">
-
     <title>My Lab -3</title>
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="plugins/css/main.css">
@@ -21,7 +20,7 @@
             <li><a class="link_element" href="https://github.com/skroo7/Web---programming/deployments/activity_log?environment=github-pages">github</a></li>
             <li><a class="link_element" href="lab5.html">Lab5</a></li>
             <li><a class="link_element" href="lab6.html">Lab6</a></li>
-            <li><a class="link_element" href="Video Programming.html">Lab7</a></li>
+            <li><a class="link_element" href="lab7.html">Lab7</a></li>
         </ul>
     </nav>
 
