--- a/lab7/lab5.html
+++ b/lab7/lab5.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript - To Do List</title>
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/lab5.css">
+    <link rel="stylesheet" href="plugins/css/font-awesome.css">
+    <link rel="stylesheet" href="plugins/css/lab5.css">
     <!-- <link rel="stylesheet" href="css/main.css">-->
-    <link rel="stylesheet" href="css/flexbox.css">
-    <script src="js/code.js"></script>
+    <link rel="stylesheet" href="plugins/css/flexbox.css">
+    <script src="plugins/js/code.js"></script>
 </head>
 <body>
 
@@ -31,12 +31,7 @@
     </template>
     <div class="content">
         <ul id="list">
-            <!--
-             <li class="item">
-                 <i class="fa fa-circle-thin co" job="complete" id="0"></i>
-                 <p class="text">Drink Coffee</p>
-                 <i class="fa fa-trash-o de" job="delete" id="0"></i>
-             </li> -->
+
         </ul>
     </div>
     <div class="add-to-do">
@@ -44,7 +39,7 @@
         <input type="text" id="input" placeholder="Add a to-do">
     </div>
 </div>
-<script src="js/todo.js"></script>
+<script src="plugins/js/todo.js"></script>
 
 
 <footer class="main-footer">
