--- a/lab7/page2.html
+++ b/lab7/page2.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/flexbox.css">
-    <script src="js/code.js"></script>
+    <link rel="stylesheet" href="plugins/css/main.css">
+    <link rel="stylesheet" href="plugins/css/flexbox.css">
+    <script src="plugins/js/code.js"></script>
     <script src='jquery-3.0.0.js' type='text/javascript'></script>
 </head>
 <body>
@@ -17,7 +17,8 @@
             <li><a class="link_element" href="page2.html">page2</a></li>
             <li><a class="link_element" href="https://github.com/skroo7/Web---programming/deployments/activity_log?environment=github-pages">github</a></li>
             <li><a class="link_element" href="lab5.html">Lab5</a></li>
-            <li><a class="link_element" href="lab6.js">Lab6</a></li>
+            <li><a class="link_element" href="lab6.html">Lab6</a></li>
+            <li><a class="link_element" href="lab7.html">Lab7</a></li>
 
         </ul>
     </nav>
